--- a/_posts/2015-09-25-p6.md
+++ b/_posts/2015-09-25-p6.md
@@ -3,10 +3,11 @@ layout: post
 title: "Testpost"
 author: ohnemax
 lang: de
-ref: p1
+archive: true
+ref: p6
 description: 
 headline: 
-modified: 2015-20-09
+modified: 2015-09-26
 category: test
 tags: [Autos]
 imagefeature: 
@@ -15,4 +16,5 @@ featured: true
 ---
 
 
+P6
 Vielleicht geht es los
