--- a/_posts/2016-09-10-300km.md
+++ b/_posts/2016-09-10-300km.md
@@ -19,17 +19,17 @@ Meist ist sogar der Seitenstreifen geteert, zumindest wenn man auf einer der "Ro
 Ansonsten wollten wir ja auf zu neuen Erfahrungen und Abenteuern. Die hatten wir direkt auch schon am zweiten Tag. Ich bin ja schon Freund davon manche Regeln anders auszulegen, es gibt aber auch welche die sollte man einhalten: dazu gehört, dass Fahrräder auf Autobahnen nichts zu suchen haben. Aber was soll man machen, wenn es keine andere geteerte Straße gibt und alle ungeteerten Straßen für Tage unbefahrbar sind. Da muss wohl für ein paar wenige Kilometer auf den Seitenstreifen der Autobahn ausgewichen werden. 
 
 
-![Fin de la Colectora, oder auch: der Beginn der Autobahn]({{ site.baseurl}} /images/September/DSCF2170_small.JPG)
+![Fin de la Colectora, oder auch: der Beginn der Autobahn]({{ site.url}} /images/September/DSCF2170_small.JPG)
 
 Und wie das nun mal so ist, je länger man so was macht, desto mehr gewöhnt man sich daran. Wir haben auch alle uns möglichen Sicherheitsregeln eingehalten und ich habe mir anschließend eine Warnweste gekauft fürs nächste Mal. 
 
 Man kennt das ja, meist kriegt man kurz nachdem man sich was gewünscht hat es auch da und will es dann gar nicht mehr, wie z.B. eine eigene kleine abgetrennte Fahrspur. Die hatten wir dann nämlich auf der nächsten Brücke, 5 km lang. Nur von Fahren kann man da nicht sprechen.
 
-![Wenn der Seitenstreifen doch nur etwas Breiter wär]({{ site.baseurl}} /images/September/DSCF2176_small.JPG)
+![Wenn der Seitenstreifen doch nur etwas Breiter wär]({{ site.url}} /images/September/DSCF2176_small.JPG)
 
 Schieben war da viel angesagt, bzw auch Taschen abnehmen und vortragen. Denn irgend so ein Trottel kam am Vortag auf die Idee, die Straßenseite zu wechseln und die Aussicht auf der anderen Seite zu genießen in dem er mit seinem LKW etwas über die Leitplanke hinausgeschoßen ist. (Angeblich ist ihm nichts passiert.) 
 
-![Augen auf im Straßenverkehr]({{ site.baseurl}} /images/September/DSCF2201_small.JPG)
+![Augen auf im Straßenverkehr]({{ site.url}} /images/September/DSCF2201_small.JPG)
 
 Dadurch mussten wir dann auf Grund von Bauarbeiten die Seite wechselnmdie dann noch etwas schmaler wurde als sie eh schon sind. Denn das war dann leider die Seite, wo die Eisenbahnschienen auch lang führen. So kommt es, dass die hervorragende Reisegeschwindigkeit von fast 18km/h zeitweise auf unter 5km/h gesunken ist.
 
