--- a/_posts/2016-09-10-300km.md
+++ b/_posts/2016-09-10-300km.md
@@ -25,12 +25,12 @@ Und wie das nun mal so ist, je länger man so was macht, desto mehr gewöhnt man
 
 Man kennt das ja, meist kriegt man kurz nachdem man sich was gewünscht hat es auch da und will es dann gar nicht mehr, wie z.B. eine eigene kleine abgetrennte Fahrspur. Die hatten wir dann nämlich auf der nächsten Brücke, 5 km lang. Nur von Fahren kann man da nicht sprechen.
 
-![Wenn der Seitenstreifen doch nur etwas Breiter wär]({{ site.url}} /images/September/DSCF2176_small.JPG)
+![Wenn der Seitenstreifen doch nur etwas Breiter wär]({{ site.url}}/images/September/DSCF2176_small.JPG)
 
 Schieben war da viel angesagt, bzw auch Taschen abnehmen und vortragen. Denn irgend so ein Trottel kam am Vortag auf die Idee, die Straßenseite zu wechseln und die Aussicht auf der anderen Seite zu genießen in dem er mit seinem LKW etwas über die Leitplanke hinausgeschoßen ist. (Angeblich ist ihm nichts passiert.) 
 
-![Augen auf im Straßenverkehr]({{ site.url}} /images/September/DSCF2201_small.JPG)
+![Augen auf im Straßenverkehr]({{ site.url}}/images/September/DSCF2201_small.JPG)
 
-Dadurch mussten wir dann auf Grund von Bauarbeiten die Seite wechselnmdie dann noch etwas schmaler wurde als sie eh schon sind. Denn das war dann leider die Seite, wo die Eisenbahnschienen auch lang führen. So kommt es, dass die hervorragende Reisegeschwindigkeit von fast 18km/h zeitweise auf unter 5km/h gesunken ist.
+Dadurch mussten wir dann auf Grund von Bauarbeiten die Seite wechseln, die dann noch etwas schmaler wurde als sie eh schon sind. Denn das war dann leider die Seite, wo die Eisenbahnschienen auch lang führen. So kommt es, dass die hervorragende Reisegeschwindigkeit von fast 18km/h zeitweise auf unter 5km/h gesunken ist.
 
 Naja, das schlechte Wetter ist jetzt vorbei und wir haben gestern bei etwa 25-30 °C im hiesigen Winter etwa 100km Strecke gemacht. Das lag daran, dass wir das Schwemmgebiet des "Rio Paraná de las Palmas" durchqueren mussten und wir nur wildzeltend mit vielen Rindern und nem naßen Zeltboden die Nacht hätten verbringen können. So kommt es aber auch, dass wir obwohl wir es langsam angehen lassen wollten, nach 5 Reisetagen und 297km schon in Gualeguaychú angekommen sind.  
