--- a/_posts/2016-09-22-weggruen.md
+++ b/_posts/2016-09-22-weggruen.md
@@ -14,6 +14,8 @@ comments: true
 featured: false
 ---
 
+Update: Bisamratte ist wohl ein Capybara, ein großes Nagetier.
+
 Eines der tollen Erlebnisse, wenn man mal wieder das Land verlassen hat, ist, dass einem überall die Natur entgegenspringt. Das passiert einem nicht nur auf dem Dorf in Uruguay, sondern auch in größeren Städten.
 
 Was ich schon an Greifvögeln gesehen habe...dazu jede Menge Roadkill: Schlangen, Hunde, Bisamratten (?).
