--- a/_posts/2016-09-23-en-magnus.md
+++ b/_posts/2016-09-23-en-magnus.md
@@ -16,7 +16,7 @@ featured: false
 
 Now we dealt with the first days of bad weather. After a nice 70 km ride through Uruguay, some uphill and downhill, we arrived at the place of Virginia and Magnus.
 
-Both and their kids recently moved from Scandinavia to Carmelo, Uruguay. Their they started a life "offgrid" (www.offgridlivinguruguay.com) and do a lot of work themselves, e.g. working on the house (container...) and garden. We decided to take a brake of cycling and help them a little while.
+Both and their kids recently moved from Scandinavia to Carmelo, Uruguay. Their they started a life ["offgrid"](www.offgridlivinguruguay.com) and do a lot of work themselves, e.g. working on the house (container...) and garden. We decided to take a brake of cycling and help them a little while.
 
 It sounded like a very good deal: We give work and take very good vegan food, internet in our tent, a space to camp an a warm shower. What we did not realize: Garden and outside work is much more exhausting than biking. But it also is a lot of fun.
 
