--- a/_posts/2016-09-23-magnus.md
+++ b/_posts/2016-09-23-magnus.md
@@ -16,12 +16,11 @@ featured: false
 
 Nun haben wir die ersten Tage schlechtes Wetter hinter uns gelassen. Nachdem wir eine super schöne 70km Tour durch Uruguay hatten, mit Berg rauf und Berg runter, sind wir bei Magnus und Virgina angekommen.
 
-![willkommen]({{ site.baseurl}}/images/September/P1020471_small.jpg)
+![willkommen]({{ site.baseurl}}/images/September/P1020471_small.JPG)
 
 Die beiden und ihre Kids sind kürzlich von Skandinavien nach Carmelo gezogen. Dort haben die beiden ein Aussteigerleben begonnen (www.offgridlivinginuruguay.com) und machen vieles selber an Haus (Container) und Garten. 
 
-![Containerhaus]({{ site.baseurl}}/images/September/DSCF2231_small.jpg)
-
+![Containerhaus]({{ site.baseurl}}/images/September/DSCF2231_small.JPG)
 Wir haben uns entschlossen zu helfen und eine Fahrradpause zu machen. Eigentlich ein guter Deal: Wir geben Arbeit, und nehmen gutes veganes Essen, Internet im Zelt, Zeltplatz und ab und an ne warme Dusche. Was wir dabei nicht bedacht hatten: Garten- und Landarbeit ist unglaublich viel anstrengender als Fahrradfahren. Macht aber trotzdem auch sehr viel Spaß.
 
 Wir haben zu Beginn noch relativ relaxed angefangen. Es ging los mit Orangen und Mandarinen pflücken von wilden Bäumen im Wald, und erst nach dem Mittagessen und nach viel Kaffee haben wir ein bischen Sand in Gräben geschaufelt.
@@ -30,6 +29,6 @@ Danach waren wir motivierter, vielleicht sogar übermotiviert. Wir begannen neue
 
 Neben dem Dach haben wir noch weitere Sachen gemacht: Schaukeln gebaut, Gräben gegraben, Grasnaben entfernt, Beton gemischt, Eis gegessen, Bier getrunken und vieles andere mehr. Morgen ist der ganze Spass vorüber, und wir wollen wieder Fahrrad fahren. 
 
-![überdimensionierte Schaukel]({{ site.baseurl}}/images/September/DSCF2239_small.jpg)
+![überdimensionierte Schaukel]({{ site.baseurl}}/images/September/DSCF2239_small.JPG)
 
 
