--- a/_posts/2016-09-23-en-magnus.md
+++ b/_posts/2016-09-23-en-magnus.md
@@ -18,7 +18,7 @@ Now we dealt with the first days of bad weather. After a nice 70 km ride through
 
 ![welcome]({{ site.baseurl}}/images/September/P1020471_small.JPG)
 
-Both and their kids recently moved from Scandinavia to Carmelo, Uruguay. Their they started a life ["offgrid"](http://www.offgridlivinguruguay.com) and do a lot of work themselves, e.g. working on the house (container...) and garden. We decided to take a brake of cycling and help them a little while.
+Both and their kids recently moved from Scandinavia to Carmelo, Uruguay. There they started a life ["offgrid"](http://www.offgridlivinguruguay.com) and do a lot of work themselves, e.g. working on the house (container...) and garden. We decided to take a brake of cycling and help them a little while.
 
 ![Containerhouse]({{ site.baseurl}}/images/September/DCSF2231_small.JPG)
 
