--- a/_posts/2016-09-23-magnus.md
+++ b/_posts/2016-09-23-magnus.md
@@ -18,7 +18,7 @@ Nun haben wir die ersten Tage schlechtes Wetter hinter uns gelassen. Nachdem wir
 
 ![willkommen]({{ site.baseurl}}/images/September/P1020471_small.JPG)
 
-Die beiden und ihre Kids sind kürzlich von Skandinavien nach Carmelo gezogen. Dort haben die beiden ein Aussteigerleben begonnen (www.offgridlivinginuruguay.com) und machen vieles selber an Haus (Container) und Garten. 
+Die beiden und ihre Kids sind kürzlich von Skandinavien nach Carmelo gezogen. Dort haben die beiden ein Aussteigerleben begonnen (http://www.offgridlivinginuruguay.com) und machen vieles selber an Haus (Container) und Garten. 
 
 ![Containerhaus]({{ site.baseurl}}/images/September/DCSF2231_small.JPG)
 
