--- a/_posts/2016-09-23-en-magnus.md
+++ b/_posts/2016-09-23-en-magnus.md
@@ -20,7 +20,7 @@ Now we dealt with the first days of bad weather. After a nice 70 km ride through
 
 Both and their kids recently moved from Scandinavia to Carmelo, Uruguay. There they started a life ["offgrid"](http://www.offgridlivinguruguay.com) and do a lot of work themselves, e.g. working on the house (container...) and garden. We decided to take a brake of cycling and help them a little while.
 
-![Containerhouse]({{ site.baseurl}}/images/September/DCSF2231_small.JPG)
+![Containerhaus]({{ site.baseurl}}/images/September/DCSF2231_small.JPG)
 
 It sounded like a very good deal: We give work and take very good vegan food, internet in our tent, a space to camp an a warm shower. What we did not realize: Garden and outside work is much more exhausting than biking. But it also is a lot of fun.
 
@@ -30,7 +30,6 @@ Afterwards, our motivation increased, probably over increased. We started to cre
 
 After the roof, we build many other things: A massive swing, digged some more ditches and trenches, removed grass and sod, mixed cement, ate icecream, drank beer and many more things. (Un-)fortunately, we will leave tomorrow. Back to cycling a while!
 
-
-![slighty oversized swing]({{ site.baseurl}}/images/September/DCSF2239_small.JPG)
+![slighty oversized swing]({{site.baseurl}}/images/September/DCSF2239_small.JPG)
 
 
