--- a/_posts/2016-09-29-de-tracks.md
+++ b/_posts/2016-09-29-de-tracks.md
@@ -17,4 +17,4 @@ featured: true
 
 Juchhu! Wir haben ein paar neue (alte) Posts erstellt, auf denen unsere Fahrradrouten zu sehen sind. Nun könnt ihr sehen, wo wir so lang gefahren sind, wo wir uns verfahren haben und wie schnell wir so waren. Das ganze so genau, wie GPS nun funktioniert.
 
-Alle Einträge sind auch auf der [http://www.latinamerica.bike/kategorien/#track](Kategorienseite) verlinkt.
+Alle Einträge sind auch auf der [Kategorienseite](http://www.latinamerica.bike/kategorien/#track) verlinkt.
