--- a/_posts/2016-09-29-en-tracks.md
+++ b/_posts/2016-09-29-en-tracks.md
@@ -17,4 +17,4 @@ featured: true
 
 We added some new (old) Posts, where you can see our cycling tracks. You will find the places we went, where we got lost and how fast we have been pedalling. All as good as GPS works.
 
-All entries are also linked on the [http://www.latinamerica.bike/categories/#track](category page).]
+All entries are also linked on the [category page](http://www.latinamerica.bike/categories/#track).
