--- a/_posts/2016-10-05-d14.md
+++ b/_posts/2016-10-05-d14.md
@@ -1,23 +1,17 @@
----
-layout: post
-title: "Radlertag 14"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Radlertag 14'  
+author: MaMo 
 modified: 2016-10-05
-category: track
-tags: 
-lang: de
+category: track 
+lang: de 
 ref: d14
-archive: false
-comments: true
-featured: false
----
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-Der Weg nach Las Flores war eher anstrengend. Es ging die ganze Zeit an der Ruta Nacional 3 lang, die viel befahren ist, zeitweise keinen Seitenstreifen hat und man die Musik die lief kaum hören konnte.
+ Der Weg nach Las Flores war eher anstrengend. Es ging die ganze Zeit an der Ruta Nacional 3 lang, die viel befahren ist, zeitweise keinen Seitenstreifen hat und man die Musik die lief kaum hören konnte.                                                                                                                                                                                                                                                                                                   
 
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230348.gpx" frameborder="0" allowfullscreen></iframe>
-
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230348  
+.gpx' frameborder='0' allowfullscreen></iframe>
