--- a/_posts/2016-10-10-d17.md
+++ b/_posts/2016-10-10-d17.md
@@ -1,24 +1,17 @@
----
-layout: post
-title: "Radlertag 17"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Radlertag 17'  
+author: MaMo 
 modified: 2016-10-10
-category: track
-tags: 
-lang: de
+category: track 
+lang: de 
 ref: d17
-archive: false
-comments: true
-featured: false
----
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-Nach einer Pause ging es heute von Tandil nach Benito Juarez. Eine nette hügelige Strecke...
+ Nach einer Pause ging es heute von Tandil nach Benito Juarez. Eine nette hügelige Strecke...                                                                                                                                                                                                                                                                                                                                                                                                                 
 
-
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230703.gpx" frameborder="0" allowfullscreen></iframe>
-
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230703  
+.gpx' frameborder='0' allowfullscreen></iframe>
