--- a/_posts/2016-10-10-d17en.md
+++ b/_posts/2016-10-10-d17en.md
@@ -1,26 +1,17 @@
----
-layout: post
-title: "Biking day 17"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Biking day 17'  
+author: MaMo 
 modified: 2016-10-10
-category: track
-tags: 
-lang: en
+category: track 
+lang: en 
 ref: d17
-archive: false
-comments: true
-featured: false
----
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-After a break we rode from Tandil to Benito Juarez. Nice and hilly road...
+ After a break we rode from Tandil to Benito Juarez. Nice and hilly road...                                                                                                                                                                                                                                                                                                          
 
-
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230703.gpx" frameborder="0" allowfullscreen></iframe>
-
-
-
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230703  
+.gpx' frameborder='0' allowfullscreen></iframe>
