--- a/_posts/2016-10-12-d19en.md
+++ b/_posts/2016-10-12-d19en.md
@@ -1,28 +1,17 @@
----
-layout: post
-title: "Biking day 19"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Biking day 19'  
+author: MaMo 
 modified: 2016-10-12
-category: track
-tags: 
-lang: en
+category: track 
+lang: en 
 ref: d19
-archive: false
-comments: true
-featured: false
----
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-Today we had the longest ride so far, nearly 110km.
+ Today we had the longest ride so far, nearly 110km.                                                                                                                                                                                                                                                                                                                                 
 
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230706.gpx" frameborder="0" allowfullscreen></iframe>
-
-
-
-
-
-
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=203706  
+.gpx' frameborder='0' allowfullscreen></iframe>
