--- a/_posts/2016-09-24-d10.md
+++ b/_posts/2016-09-24-d10.md
@@ -1,17 +1,17 @@
----
-layout: post
-title: "Radlertag 10"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Radlertag 10'  
+author: MaMo 
 modified: 2016-09-24
-category: track
-tags: 
-lang: de
+category: track 
+lang: de 
 ref: d10
-archive: false
-comments: true
-featured: false
----
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=229806.gpx" frameborder="0" allowfullscreen></iframe>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
+
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=229806  
+.gpx' frameborder='0' allowfullscreen></iframe>
