--- a/_posts/2016-09-24-d10en.md
+++ b/_posts/2016-09-24-d10en.md
@@ -1,20 +1,17 @@
----
-layout: post
-title: "Biking day 10"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Biking day 10'  
+author: MaMo 
 modified: 2016-09-24
-category: track
-tags: 
-lang: en
+category: track 
+lang: en 
 ref: d10
-archive: false
-comments: true
-featured: false
----
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=229806.gpx" frameborder="0" allowfullscreen></iframe>
+archive: false 
+comments: true 
+featured: false 
+--- 
 
+                                                                                                                                                                                                                                                                                                                                                                                     
 
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=229806  
+.gpx' frameborder='0' allowfullscreen></iframe>
