--- a/_posts/2016-10-02-d12.md
+++ b/_posts/2016-10-02-d12.md
@@ -1,23 +1,17 @@
----
-layout: post
-title: "Radlertag 12"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Radlertag 12'  
+author: MaMo 
 modified: 2016-10-02
-category: track
-tags: 
-lang: de
+category: track 
+lang: de 
 ref: d12
-archive: false
-comments: true
-featured: false
----
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-Raus aus Buenos Aires ging es dann doch leichter als gedacht,nur das es mal wieder geregnet hat...dafür waren wir aber recht flott unterwegs und schon recht schnell in Cañuelas.
+ Raus aus Buenos Aires ging es dann doch leichter als gedacht. Wir haben für den ersten Teil einen Vorortzug benutzt. Radfahren war dann auch wieder dabei, nur das es mal wieder geregnet hat...dafür waren wir aber recht flott unterwegs und schon recht schnell in Cañuelas.                                                                                                                                                                                                                              
 
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230346.gpx" frameborder="0" allowfullscreen></iframe>
-
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230346  
+.gpx' frameborder='0' allowfullscreen></iframe>
