--- a/_posts/2016-10-02-d12en.md
+++ b/_posts/2016-10-02-d12en.md
@@ -1,23 +1,17 @@
----
-layout: post
-title: "Biking day 12"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Biking day 12'  
+author: MaMo 
 modified: 2016-10-02
-category: track
-tags: 
-lang: en
+category: track 
+lang: en 
 ref: d12
-archive: false
-comments: true
-featured: false
----
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-To leave Buenos Aires was faster and easier than we thouht. Just the rain was unexpected. 
+ To leave Buenos Aires was faster and easier than we thought. We used an urban train for parts of the track. Just the rain was unexpected, but we quickly reached Cañuelas.                                                                                                                                                                                                          
 
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230346.gpx" frameborder="0" allowfullscreen></iframe>
-
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230346  
+.gpx' frameborder='0' allowfullscreen></iframe>
