--- a/_posts/2016-10-03-d13.md
+++ b/_posts/2016-10-03-d13.md
@@ -1,23 +1,17 @@
----
-layout: post
-title: "Radlertag 13"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Radlertag 13'  
+author: MaMo 
 modified: 2016-10-03
-category: track
-tags: 
-lang: de
+category: track 
+lang: de 
 ref: d13
-archive: false
-comments: true
-featured: false
----
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-Der Weg nach San Miguel del Monte war schön, wir hatten Rückenwind und gute Laune.
+ Der Weg nach San Miguel del Monte war schön, wir hatten Rückenwind und gute Laune.                                                                                                                                                                                                                                                                                                                                                                                                                           
 
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230347.gpx" frameborder="0" allowfullscreen></iframe>
-
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230347  
+.gpx' frameborder='0' allowfullscreen></iframe>
