--- a/_posts/2016-10-06-d15.md
+++ b/_posts/2016-10-06-d15.md
@@ -1,22 +1,17 @@
----
-layout: post
-title: "Radlertag 15"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Radlertag 15'  
+author: MaMo 
 modified: 2016-10-06
-category: track
-tags: 
-lang: de
+category: track 
+lang: de 
 ref: d15
-archive: false
-comments: true
-featured: false
----
-Wir sind wieder auf kleine Straßen abgebogen. Ziel ist Rauch, von den Argentiniern aber als "Rausch" ausgesprochen...(:
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230350.gpx" frameborder="0" allowfullscreen></iframe>
+ Wir sind wieder auf kleine Straßen abgebogen. Ziel ist Rauch, von den Argentiniern aber als "Rausch" ausgesprochen...(:                                                                                                                                                                                                                                                                                                                                                                                      
 
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230350  
+.gpx' frameborder='0' allowfullscreen></iframe>
