--- a/_posts/2016-10-06-d15en.md
+++ b/_posts/2016-10-06-d15en.md
@@ -1,22 +1,17 @@
----
-layout: post
-title: "Biking day 15"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Biking day 15'  
+author: MaMo 
 modified: 2016-10-06
-category: track
-tags: 
-lang: en
+category: track 
+lang: en 
 ref: d15
-archive: false
-comments: true
-featured: false
----
-Back to small streets. We are heading to Rauch, spoken like Rausch in argentinian Spanish.
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230350.gpx" frameborder="0" allowfullscreen></iframe>
+ Back to small streets. We are heading to Rauch, spoken like Rausch in argentinian Spanish.                                                                                                                                                                                                                                                                                          
 
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230350  
+.gpx' frameborder='0' allowfullscreen></iframe>
