--- a/_posts/2016-10-07-d16.md
+++ b/_posts/2016-10-07-d16.md
@@ -1,23 +1,17 @@
----
-layout: post
-title: "Radlertag 16"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Radlertag 16'  
+author: MaMo 
 modified: 2016-10-07
-category: track
-tags: 
-lang: de
+category: track 
+lang: de 
 ref: d16
-archive: false
-comments: true
-featured: false
----
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-Wir hatten heute den krassesten Wind unserer Tour und zwischenzeitig eine Durchschnittsgeschwindigkeit von weniger als 14km/h, bis uns ein Pickup mitgenommen hat und wir Wind und Regen so entgehen konnten.
+ Wir hatten heute den krassesten Wind unserer Tour und zwischenzeitig eine Durchschnittsgeschwindigkeit von weniger als 14km/h, bis uns ein Pickup mitgenommen hat und wir Wind und Regen so entgehen konnten.                                                                                                                                                                                                                                                                                                
 
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230351.gpx" frameborder="0" allowfullscreen></iframe>
-
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230351  
+.gpx' frameborder='0' allowfullscreen></iframe>
