--- a/_posts/2016-10-07-d16en.md
+++ b/_posts/2016-10-07-d16en.md
@@ -1,25 +1,17 @@
----
-layout: post
-title: "Biking day 16"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Biking day 16'  
+author: MaMo 
 modified: 2016-10-07
-category: track
-tags: 
-lang: en
+category: track 
+lang: en 
 ref: d16
-archive: false
-comments: true
-featured: false
----
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-Today we were almost killed by the wind. Our average speed dropped to below 14km/h until a Pickup gave us a lift.
+ Today we were almost killed by the wind. Our average speed dropped to below 14km/h until a Pickup gave us a lift.                                                                                                                                                                                                                                                                   
 
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230351.gpx" frameborder="0" allowfullscreen></iframe>
-
-
-
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230351  
+.gpx' frameborder='0' allowfullscreen></iframe>
