--- a/_posts/2016-10-12-d19.md
+++ b/_posts/2016-10-12-d19.md
@@ -1,24 +1,17 @@
----
-layout: post
-title: "Radlertag 19"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Radlertag 19'  
+author: MaMo 
 modified: 2016-10-12
-category: track
-tags: 
-lang: de
+category: track 
+lang: de 
 ref: d19
-archive: false
-comments: true
-featured: false
----
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-Heute hatten wir wohl die längste Etappe seit dem wir unterwegs sind, knappe 110km.
+ Heute hatten wir wohl die längste Etappe seit dem wir unterwegs sind, knappe 110km.                                                                                                                                                                                                                                                                                                                                                                                                                          
 
-
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230706.gpx" frameborder="0" allowfullscreen></iframe>
-
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=203706  
+.gpx' frameborder='0' allowfullscreen></iframe>
