--- a/_posts/2016-10-13-d20en.md
+++ b/_posts/2016-10-13-d20en.md
@@ -1,29 +1,17 @@
----
-layout: post
-title: "Biking day 20"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Biking day 20'  
+author: MaMo 
 modified: 2016-10-13
-category: track
-tags: 
-lang: en
+category: track 
+lang: en 
 ref: d20
-archive: false
-comments: true
-featured: false
----
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-Soft 90km ride to Bahia Blanca, unfortunately we have not seen any white beaches.
+ Soft 90km ride to Bahia Blanca, unfortunately we have not seen any white beaches.                                                                                                                                                                                                                                                                                                   
 
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230708.gpx" frameborder="0" allowfullscreen></iframe>
-
-
-
-
-
-
-
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230708  
+.gpx' frameborder='0' allowfullscreen></iframe>
