--- a/_posts/2016-10-16-d21.md
+++ b/_posts/2016-10-16-d21.md
@@ -1,29 +1,17 @@
----
-layout: post
-title: "Radlertag 21"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Radlertag 21'  
+author: MaMo 
 modified: 2016-10-16
-category: track
-tags: 
-lang: de
+category: track 
+lang: de 
 ref: d21
-archive: false
-comments: true
-featured: false
----
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-Nicht mal ganze 80km, sanft ansteigende Route nach Tornquist, ein kleines gemütliches Städtchen. Glücklicherweise war die Straße sehr ruhig - es war Sonntag. Dummerweise gab es Regen, den ganzen Tag und durchaus heftig. Ein Lob auf Regenjacke, -hose und -gamaschen.
+ Nicht mal ganze 80km, sanft ansteigende Route nach Tornquist, ein kleines gemütliches Städtchen. Glücklicherweise war die Straße sehr ruhig - es war Sonntag. Dummerweise gab es Regen, den ganzen Tag und durchaus heftig. Ein Lob auf Regenjacke, -hose und -gamaschen.                                                                                                                                                                                                                                    
 
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230922.gpx" frameborder="0" allowfullscreen></iframe>
-
-
-
-
-
-
-
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230922  
+.gpx' frameborder='0' allowfullscreen></iframe>
