--- a/_posts/2016-10-17-d22.md
+++ b/_posts/2016-10-17-d22.md
@@ -1,30 +1,17 @@
----
-layout: post
-title: "Radlertag 22"
-author: team
-description: 
-headline: 
+---   
+layout: post 
+title: 'Radlertag 22'  
+author: MaMo 
 modified: 2016-10-17
-category: track
-tags: 
-lang: de
+category: track 
+lang: de 
 ref: d22
-archive: false
-comments: true
-featured: false
----
+archive: false 
+comments: true 
+featured: false 
+--- 
 
-Sehr kurze Strecke heute. Von Tornquist sind wir zum Parkeingang des "Parque Provincial Ernesto Tornquist" geradelt. Zwar 300 Höhenmeter, aber dafür auch nur etwas mehr als 20km. Aus Langeweile sind wir dann nachmittags noch etwas weiter, zum zweiten Parkeingang (ca. 10km hin und zurück) und dort ganze 30 Minuten gewandert.
+ Sehr kurze Strecke heute. Von Tornquist sind wir zum Parkeingang des "Parque Provincial Ernesto Tornquist" geradelt. Zwar 300 Höhenmeter, aber dafür auch nur etwas mehr als 20km. Aus Langeweile sind wir dann nachmittags noch etwas weiter, zum zweiten Parkeingang (ca. 10km hin und zurück) und dort ganze 30 Minuten gewandert.                                                                                                                                                                        
 
-
-<iframe width="480" height="360" src="http://track-kit.net/maps_s3/?v=embed&track=230877.gpx" frameborder="0" allowfullscreen></iframe>
-
-
-
-
-
-
-
-
-
-
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230877  
+.gpx' frameborder='0' allowfullscreen></iframe>
