--- a/_posts/2016-09-24-d10en.md
+++ b/_posts/2016-09-24-d10en.md
@@ -13,5 +13,4 @@ featured: false
 
                                                                                                                                                                                                                                                                                                                                                                                      
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=229806  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=229806.gpx' frameborder='0' allowfullscreen></iframe>
