--- a/_posts/2016-10-03-d13.md
+++ b/_posts/2016-10-03-d13.md
@@ -13,5 +13,4 @@ featured: false
 
  Der Weg nach San Miguel del Monte war schön, wir hatten Rückenwind und gute Laune.                                                                                                                                                                                                                                                                                                                                                                                                                           
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230347  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230347.gpx' frameborder='0' allowfullscreen></iframe>
