--- a/_posts/2016-10-07-d16.md
+++ b/_posts/2016-10-07-d16.md
@@ -13,5 +13,4 @@ featured: false
 
  Wir hatten heute den krassesten Wind unserer Tour und zwischenzeitig eine Durchschnittsgeschwindigkeit von weniger als 14km/h, bis uns ein Pickup mitgenommen hat und wir Wind und Regen so entgehen konnten.                                                                                                                                                                                                                                                                                                
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230351  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230351.gpx' frameborder='0' allowfullscreen></iframe>
