--- a/_posts/2016-10-10-d17.md
+++ b/_posts/2016-10-10-d17.md
@@ -13,5 +13,4 @@ featured: false
 
  Nach einer Pause ging es heute von Tandil nach Benito Juarez. Eine nette hügelige Strecke...                                                                                                                                                                                                                                                                                                                                                                                                                 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230703  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230703.gpx' frameborder='0' allowfullscreen></iframe>
