--- a/_posts/2016-10-25-d27en.md
+++ b/_posts/2016-10-25-d27en.md
@@ -13,5 +13,4 @@ featured: false
 
  The way to Viedma - again nice wind from behind and a nice town to arrive. 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231935  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231935.gpx' frameborder='0' allowfullscreen></iframe>
