--- a/_posts/2016-10-29-d30.md
+++ b/_posts/2016-10-29-d30.md
@@ -13,5 +13,4 @@ featured: false
 
 Es ging zunächst langsam und anstrengend weiter, bevor dann der Weg gut wurde und sogar der befürchtete Abschnitt bei Bahia Creek, war deutlich besser fahrbar, als die Strecke gestern. Zwischendurch hatten wir das Gefühl in der Sahara zu stehen.
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231937  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231937.gpx' frameborder='0' allowfullscreen></iframe>
