--- a/_posts/2016-11-02-d33.md
+++ b/_posts/2016-11-02-d33.md
@@ -13,5 +13,4 @@ featured: false
 
 Schöne Strecke, guter Wind und ab und an lukten schon mal die Hügel von Sierra Grande durch, was die Strecke etwas abwechslungsreicher gestaltete. Dazu kam ein sehr netter kostenloser Campingplatz von ACA - dem argentinischen Automobilclub.
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231939  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231939.gpx' frameborder='0' allowfullscreen></iframe>
