--- a/_posts/2016-11-03-d34en.md
+++ b/_posts/2016-11-03-d34en.md
@@ -13,5 +13,4 @@ featured: false
 
  The first 25 km were nice, afterwards we got our first real experience of Patagonian wind. We had to be very careful not to be blown in oncoming traffic. After 50km, there was a truck stop, where we spend the night. Very nice, and our cheapest hotel with real beds. 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231940  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231940.gpx' frameborder='0' allowfullscreen></iframe>
