--- a/_posts/2016-09-25-d11.md
+++ b/_posts/2016-09-25-d11.md
@@ -13,5 +13,4 @@ featured: false
 
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=229812  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=229812.gpx' frameborder='0' allowfullscreen></iframe>
