--- a/_posts/2016-10-03-d13en.md
+++ b/_posts/2016-10-03-d13en.md
@@ -13,5 +13,4 @@ featured: false
 
  It was a nice day biking to San Miguel del Monte, we had wind from behind and were in a good mood.                                                                                                                                                                                                                                                                                  
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230347  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230347.gpx' frameborder='0' allowfullscreen></iframe>
