--- a/_posts/2016-10-05-d14en.md
+++ b/_posts/2016-10-05-d14en.md
@@ -13,5 +13,4 @@ featured: false
 
  This was an unpleasend day, all day long we needed to follow Ruta Nacional 3 which has a lot of traffic, no extra lane and it was too noisy to listen to music...                                                                                                                                                                                                                   
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230348  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230348.gpx' frameborder='0' allowfullscreen></iframe>
