--- a/_posts/2016-10-06-d15.md
+++ b/_posts/2016-10-06-d15.md
@@ -13,5 +13,4 @@ featured: false
 
  Wir sind wieder auf kleine Straßen abgebogen. Ziel ist Rauch, von den Argentiniern aber als "Rausch" ausgesprochen...(:                                                                                                                                                                                                                                                                                                                                                                                      
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230350  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230350.gpx' frameborder='0' allowfullscreen></iframe>
