--- a/_posts/2016-10-10-d17en.md
+++ b/_posts/2016-10-10-d17en.md
@@ -13,5 +13,4 @@ featured: false
 
  After a break we rode from Tandil to Benito Juarez. Nice and hilly road...                                                                                                                                                                                                                                                                                                          
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230703  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230703.gpx' frameborder='0' allowfullscreen></iframe>
