--- a/_posts/2016-10-11-d18.md
+++ b/_posts/2016-10-11-d18.md
@@ -13,5 +13,4 @@ featured: false
 
  Heute hatten wir wohl die schnellste Etappe seit dem wir unterwegs sind. Wir sind mit Rückenwind nur so dahin geflogen.                                                                                                                                                                                                                                                                                                                                                                                      
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230705  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230705.gpx' frameborder='0' allowfullscreen></iframe>
