--- a/_posts/2016-10-11-d18en.md
+++ b/_posts/2016-10-11-d18en.md
@@ -13,5 +13,4 @@ featured: false
 
  Today I guess we had the fastet trip so far. Got wind from behind and did not need to pedal hard.                                                                                                                                                                                                                                                                                   
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230705  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230705.gpx' frameborder='0' allowfullscreen></iframe>
