--- a/_posts/2016-10-13-d20.md
+++ b/_posts/2016-10-13-d20.md
@@ -13,5 +13,4 @@ featured: false
 
  Seichte 90km ging es heute nach Bahia Blanca, weiße Strände haben wir aber nicht zu Gesicht bekommen.                                                                                                                                                                                                                                                                                                                                                                                                        
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230708  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230708.gpx' frameborder='0' allowfullscreen></iframe>
