--- a/_posts/2016-10-13-d20en.md
+++ b/_posts/2016-10-13-d20en.md
@@ -13,5 +13,4 @@ featured: false
 
  Soft 90km ride to Bahia Blanca, unfortunately we have not seen any white beaches.                                                                                                                                                                                                                                                                                                   
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230708  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230708.gpx' frameborder='0' allowfullscreen></iframe>
