--- a/_posts/2016-10-16-d21en.md
+++ b/_posts/2016-10-16-d21en.md
@@ -13,5 +13,4 @@ featured: false
 
  Not really 80km, slowly uphill to the small town of Tornquist. Luckily, the road was quiet - it was sunday. Unfortunately, there was rain - a lot of it. Basically the whole day.                                                                                                                                                                                                   
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230922  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230922.gpx' frameborder='0' allowfullscreen></iframe>
