--- a/_posts/2016-10-19-d23.md
+++ b/_posts/2016-10-19-d23.md
@@ -13,5 +13,4 @@ featured: false
 
  Zum ersten mal sind wir eine Strecke zurück gefahren die wir schon kannten. Vom "Parque Provincial Ernesto Tornquist" ging es zurück nach Bahía Blanca. Beinahe 100km Gesamtstrecke. Die ersten 20km waren perfekte Radelbedingungen - mittelstarker Wind von hinten und leicht bergab. Wir haben sie in deutlich unter einer Stunde zurückgelegt. Anschließend waren die 80km doch etwas anstrengender. Die meiste Zeit kam der Wind seitlich von vorne, und die Straße war relativ voll mit vielen Trucks. 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230923  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230923.gpx' frameborder='0' allowfullscreen></iframe>
