--- a/_posts/2016-10-19-d23en.md
+++ b/_posts/2016-10-19-d23en.md
@@ -13,5 +13,4 @@ featured: false
 
  First time we go the same road back that we came - from "Parque Provincial Ernesto Tornquist" back to Bahía Blanca. Nearly 100km in total. The first 20km were perfect cycling conditions - medium wind from behind plus soft descend. We made them quickly, in much less than an hour. The other 80km were more demanding - wind from sideways, plus a busy road with many trucks. 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230923  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=230923.gpx' frameborder='0' allowfullscreen></iframe>
