--- a/_posts/2016-10-22-d24.md
+++ b/_posts/2016-10-22-d24.md
@@ -13,5 +13,4 @@ featured: false
 
  Eigentlich wollten wir wo ganz anders unsere Nacht verbringen, haben uns dann aber überlegt, dass es mehr Sinn macht weiter zu fahren. So sind wir nach Treniente Origone gekommen. Kleines Dorf mitten im nirgendwo. Nachdem wiruns durchgefragt hatten, bauten wir unser Zelt auf dem Dorfplatz auf. Es gab n Klo, ne Dusche und ne Parilla, alles für umme. Hervorragender Ort zum campen. 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231933  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231933.gpx' frameborder='0' allowfullscreen></iframe>
