--- a/_posts/2016-10-23-d25en.md
+++ b/_posts/2016-10-23-d25en.md
@@ -13,5 +13,4 @@ featured: false
 
  Short trip, good wind, nice camp site - what is more to ask?
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231942  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231942.gpx' frameborder='0' allowfullscreen></iframe>
