--- a/_posts/2016-10-24-d26.md
+++ b/_posts/2016-10-24-d26.md
@@ -13,5 +13,4 @@ featured: false
 
  Etwas längerer Tag, relativ öde und vor allem kalt am Ende. Zielort: Man glaubt es kaum, Mini-Ort mit Hotel und Feuerwehr. 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231934  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231934.gpx' frameborder='0' allowfullscreen></iframe>
