--- a/_posts/2016-10-26-d28.md
+++ b/_posts/2016-10-26-d28.md
@@ -13,5 +13,4 @@ featured: false
 
  Wir verlassen Ruta Nacional 3. Auf in die Wildnis, allerdings kann man von fahren hier nicht sprechen, eher von kriechen. Dafür direkt Tiere Patagoniens gesehen. 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231936  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231936.gpx' frameborder='0' allowfullscreen></iframe>
