--- a/_posts/2016-10-26-d28en.md
+++ b/_posts/2016-10-26-d28en.md
@@ -13,5 +13,4 @@ featured: false
 
  Leaving Ruta Nacional 3. Into the wild, but today it was less cycling than creeping forward against the wind. In return, we got to see animals of Patagonia (alive!). 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231936  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231936.gpx' frameborder='0' allowfullscreen></iframe>
