--- a/_posts/2016-10-28-d29.md
+++ b/_posts/2016-10-28-d29.md
@@ -13,5 +13,4 @@ featured: false
 
 Nachdem wir die asphaltierte Straße verlassen haben, und nochmal 15l Wasser auf unsere Esel gespannt hatten, ging es anstrengend weiter. Die Straße bestand aus Steinchen und streckenweise viel Sand. Hier war definitiv das anstrengenste sein Rad zu schieben. Wenn man mal fahren konnte, gings ganz gut. Für die Nacht hatten wir einen wunderschönen Campingplat. 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231944  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231944.gpx' frameborder='0' allowfullscreen></iframe>
