--- a/_posts/2016-10-28-d29en.md
+++ b/_posts/2016-10-28-d29en.md
@@ -13,5 +13,4 @@ featured: false
 
  We left the paved road after 15 km for gravel and sand. We also added 15 liters of water to our luggage. It was very exhausting, especially to push the bike in very sandy parts. If we could cycle, it was ok. We found a gorgeous point for the night! 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231944  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231944.gpx' frameborder='0' allowfullscreen></iframe>
