--- a/_posts/2016-10-29-d30en.md
+++ b/_posts/2016-10-29-d30en.md
@@ -13,5 +13,4 @@ featured: false
 
  We continued on gravel road. We got told there would be a lot of sand after Bahia Creek, but were surprised to see a relatively good road. There was a lot of sand, but mostly aside of the road - felt like cycling through the Sahara. 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231937  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231937.gpx' frameborder='0' allowfullscreen></iframe>
