--- a/_posts/2016-10-30-d31en.md
+++ b/_posts/2016-10-30-d31en.md
@@ -13,5 +13,4 @@ featured: false
 
  Again, gravel road, for now the last day. We made a good 70 km, but than a Pick-Up stopped and offered a lift. It even brought us to Las Grutas, so we saved a full day of cycling. 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231943  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231943.gpx' frameborder='0' allowfullscreen></iframe>
