--- a/_posts/2016-11-01-d32.md
+++ b/_posts/2016-11-01-d32.md
@@ -13,5 +13,4 @@ featured: false
 
 Kurze 30km mit viel Wind. Das gab einen Nachmittag an der Tanke, denn danach kam nichts mehr wo wir hätten bleiben können. Dafür gabs Kaffee und Wifi.
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231938  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231938.gpx' frameborder='0' allowfullscreen></iframe>
