--- a/_posts/2016-11-01-d32en.md
+++ b/_posts/2016-11-01-d32en.md
@@ -13,5 +13,4 @@ featured: false
 
  Very short, only 30km. But there was a lot of wind, and the service station we stopped the only shelter for long. So we spent an afternoon at a gas station, drinking coffee. They even had WiFi! 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231938  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231938.gpx' frameborder='0' allowfullscreen></iframe>
