--- a/_posts/2016-11-03-d34.md
+++ b/_posts/2016-11-03-d34.md
@@ -13,5 +13,4 @@ featured: false
 
 Die ersten 25km liefen super, dann erlebten wir den ersten richtigen patagonischen Wind. Es bliess so viel Wind, dass wir aufpassen mussten nicht in den Gegenverkehr gepustet zu werden. Nach 50km kam ein Truckerstopppunkt an dem wir die Nacht verbrachten - mit Abstand die günstigste Übernachtung in zwei richtigen Betten.
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231940  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231940.gpx' frameborder='0' allowfullscreen></iframe>
