--- a/_posts/2016-11-04-d35en.md
+++ b/_posts/2016-11-04-d35en.md
@@ -13,5 +13,4 @@ featured: false
 
  We started before sunrise to escape the wind, which started at noon. As such, we had rather backwind and arrived very quickly in Puerto Madryn (90km!). Before lunch, we could sit in a Heladeria and enjoy very good icecream, before we finished the day at the ACA campsite. 
 
-<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231941  
-.gpx' frameborder='0' allowfullscreen></iframe>
+<iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231941.gpx' frameborder='0' allowfullscreen></iframe>
