new tracks and stats

--- a/_posts/2016-10-30-d31.md
+++ b/_posts/2016-10-30-d31.md
@@ -11,6 +11,6 @@ comments: true
 featured: false 
 --- 
 
-Nachdem wir 70km ungeteerte, aber gute Straße hinter uns hatten, hat uns ein Jeep die Tagesetappe von morgen erspart. Mit Abstand der sxhönste Teil der Küstenroute.
+Nachdem wir 70km ungeteerte, aber gute Straße hinter uns hatten, hat uns ein Jeep die Tagesetappe von morgen erspart. Mit Abstand der schönste Teil der Küstenroute.
 
 <iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=231943.gpx' frameborder='0' allowfullscreen></iframe>
