remove spelling mistake

--- a/_posts/2017-03-24-desert-de.md
+++ b/_posts/2017-03-24-desert-de.md
@@ -10,7 +10,7 @@ ref: desert
 archive: false
 comments: true
 featured: false
-imageeature: march/P1040474_small.JPG
+imagefeature: march/P1040474_small.JPG
 ---
 
 Und wir haben entschieden, sie mit dem Fahrrad zu durchqueren. Verrückt, nicht? 1500 km später sitzen wir nun bei Pisco Sour in San Pedro de Atacama und schreiben diesen Bericht.
