desert post en correction

--- a/_posts/2017-03-24-desert-en.md
+++ b/_posts/2017-03-24-desert-en.md
@@ -17,8 +17,8 @@ and we decided to cycle through. Crazy, nor? 1500km later we drink Pisco Sour in
 
 We started in La Serena. From there we mostly cycled along the Panamericana, a paved highway with not too much traffic. Luckily also the police ignored the cyclist-forbidden signs. Additionally we did not need to pay the hihway-fee, but were allowed to use the existing facilities - like free and clean showers, drinking water, toilets and free camp spots.
 
-![resting areas during the hotest time of the day]({{ site.baseurl }}/images/march/P1040294_small.JPG)  
-*resting areas during the hotest time of the day*
+![Resting areas during the hottest time of the day]({{ site.baseurl }}/images/march/P1040294_small.JPG)  
+*Resting areas during the hottest time of the day*
 
 ![Sometimes we needed to built a shelter]({{ site.baseurl }}/images/march/DSCF3732_small.JPG)  
 *Sometimes we needed to built a shelter*
@@ -30,7 +30,7 @@ The desert was changing all of the time. First there were still some bushes and 
 
 All over the trip it was very easy to find all kinds of food cyclists want, we just had a problem with water - it needed to be planned carefully. As we said, driest desert on earth. Usually we had 10 liters of water on our bikes, which lasts a day and a night. Once we miscalculated our needs and got to know the friendliness of Chilenian car drivers. Martha was standing with an empty bottle at the side of the road and was waving. The second car stopped and gave us one bottle of water. Some minutes later a car stopped - without us waving. The car-driver was told by a bus (the first car which passed by) to bring us some water. Amazing - there were some apples on top. On some of the other days a car just stopped and offered us water without us asking. We also got offered some lifts, which this time we did not accept.
 
-![Happy cyclist who just got lots of drinking water!]({{ site.baseurl }}/images/march/P1040601_small.JPG) 
+![Happy cyclists who just got lots of drinking water!]({{ site.baseurl }}/images/march/P1040601_small.JPG) 
 *Happy cyclist who just got lots of drinking water!*
 
 The best part if this tour was our route through the national parc "Pan de Azucar. It is a wonderful parc with amazing beaches, nice people, breath-taking cliffs, gorges and lots of cacti. In the parc we were also able to understand how it is possible for plants to grow in some places: every morning the area close to the coast was covered in mist. Some mornings it was so dense that it felt like standing in the rain. Nevertheless, the clouds always vanished with the first bits of sun.
